kubernetes/apps/automation/esphome/app/service.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: esphome
spec:
  ports:
    - name: http
      port: 6052
      targetPort: 6052
      protocol: TCP
